--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
   margin: 0;
 font-family: 'Montserrat', sans-serif;
 background-color: transparent;
-background-image: url("images/background image.jpg");
+background-image: url("background image.jpg");
 background-position: center center;
 background-repeat: no-repeat;
 background-attachment: fixed;
